Multihoming PoC
this is a suqash and rebase of
github.com/cilium/cilium/tree/tklauser+brb/wip/multi-homing

------------------------------------------------------------
datapath/connector: pass map index to getEntryProgInstructions

This allows to specify programs other than the first one to be tail
called. Also adjust the unit test accordingly. This will be used in a
successive change.


datapath/connector: return netlink.Link interface directly instead of pointer

netlink.Link is already an interface type, so there is no copy involved.
Return the interface type directly without the pointer indirection.


datapath/iptables: use constants for host devices

Use the constants from pkg/defaults instead of hard-coding
cilium_{host,net}.


plugins/cilium-cni: use logger.WithField for single field logs

Use logger.WithField instead of logger.WithFields(logrus.Fields{...})
for logs with a single field.


plugins/cilium-cni: check IPAM IPv4/IPv6 address configuration only once

Refactor the check of the IPAM configuration to avoid repeated calls to
ipv4IsEnabled and ipv6IsEnabled.


plugins/cilium-cni: avoid copy on newCNIRoute call

Pass the route.Route argument as a pointer to avoid copying it.


bpf/init.sh: fix indentation

Also remove a superfluous case/esac which is always matching.


ipam: reuse existing consts for IP family

Reuse the exported package level consts instead of duplicating them for
reporting metrics.


node: use predefined ipv{4,6}-range option name consts


defaults, node: rename IPv4Prefix consts

The current names stutter (e.g. defaults.DefaultIPv4Prefix). Drop the
Default* prefix.


Add agent flag to specify multi-homing devices


[WIP] plugins/cilium-cni: create additional veth pair for multi homed pods


[WIP] datapath: set secondary IPv4 router address for multi-homing if configured

Currently derived from primary router address, to be changed to IPAM
allocated address.

XXX: Secondary IP is passed to bpf/init.sh, this should probably be done
in
