# api/v1/openapi.yaml
@@ -426,6 +426,7 @@ paths:
       parameters:
       - "$ref": "#/parameters/ipam-family"
       - "$ref": "#/parameters/ipam-owner"
+      - "$ref": "#/parameters/ipam-pool"
       - "$ref": "#/parameters/ipam-expiration"
       responses:
         '201':
@@ -445,6 +446,7 @@ paths:
       parameters:
       - "$ref": "#/parameters/ipam-ip"
       - "$ref": "#/parameters/ipam-owner"
+      - "$ref": "#/parameters/ipam-pool"
       responses:
         '200':
           description: Success
@@ -468,6 +470,7 @@ paths:
       - ipam
       parameters:
       - "$ref": "#/parameters/ipam-release-arg"
+      - "$ref": "#/parameters/ipam-pool"
       responses:
         '200':
           description: Success
@@ -1141,6 +1144,10 @@ parameters:
     name: owner
     in: query
     type: string
+  ipam-pool:
+    name: pool
+    in: query
+    type: string
   ipam-expiration:
     name: expiration
     in: header
@@ -1175,7 +1182,6 @@ parameters:
     required: false
     in: query
     type: string
-
 
 definitions:
   Endpoint:
@@ -2398,6 +2404,8 @@ definitions:
           ipv6:
             description: Status of masquerading for IPv6 traffic
             type: boolean
+      multi-homing-configuration:
+        "$ref": "#/definitions/MultiHomingConfiguration"
       egress-multi-home-ip-rule-compat:
         description: Configured compatibility mode for --egress-multi-home-ip-rule-compat
         type: boolean
@@ -2416,6 +2424,15 @@ definitions:
     type: string
     enum:
       - veth
+  MultiHomingConfiguration:
+    description: Multi-homing configuration
+    type: object
+    properties:
+      devices:
+        description: List of devices used in multi-homing mode
+        type: array
+        items:
+          type: string
   EndpointConfigurationSpec:
     description: An endpoint's configuration
     type: object
