# api/v1/server/restapi/ipam/post_ipam_parameters.go
@@ -48,6 +48,10 @@ type PostIpamParams struct {
 	  In: query
 	*/
 	Owner *string
+	/*
+	  In: query
+	*/
+	Pool *string
 }
 
 // BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
@@ -74,6 +78,12 @@ func (o *PostIpamParams) BindRequest(r *http.Request, route *middleware.MatchedR
 	if err := o.bindOwner(qOwner, qhkOwner, route.Formats); err != nil {
 		res = append(res, err)
 	}
+
+	qPool, qhkPool, _ := qs.GetOK("pool")
+	if err := o.bindPool(qPool, qhkPool, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
@@ -148,6 +158,24 @@ func (o *PostIpamParams) bindOwner(rawData []string, hasKey bool, formats strfmt
 		return nil
 	}
 	o.Owner = &raw
+
+	return nil
+}
+
+// bindPool binds and validates parameter Pool from query.
+func (o *PostIpamParams) bindPool(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: false
+	// AllowEmptyValue: false
+	if raw == "" { // empty values pass all other validations
+		return nil
+	}
+
+	o.Pool = &raw
 
 	return nil
 }
